--- a/templates/index.html
+++ b/templates/index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSV Upload</title>
 </head>
 
 <body>
-    <h1>CSV Upload</h1>
+    <div>
+        <h1>CSV Upload</h1>
 
-    <form method="post" enctype="multipart/form-data">
-        <label for="file">Select CSV file:</label>
-        <input type="file" id="file" name="file" accept=".csv">
-        <br>
-        <button type="submit">Upload</button>
-    </form>
+        <form method="post" enctype="multipart/form-data">
+            <label for="file">Select CSV file:</label>
+            <input type="file" id="file" name="file" accept=".csv">
+            <br>
+            <button type="submit">Upload</button>
+        </form>
+    </div>
 </body>
 
 </html>
